--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -51,10 +51,11 @@
                 <div class="row">
                     <div class="col-lg-12" id="div_thead" style="display:none">
                         <div class="row g-1">
-                            <div class="col-lg-2 col-sm-12"><b>Nguyện vọng</b></div>
+                            <div class="col-lg-1 col-sm-12"><b>Nguyện vọng</b></div>
                             <div class="col-lg-3 col-sm-12"><b>Ngành</b></div>
-                            <div class="col-lg-3 col-sm-12"><b>Tổ hợp môn</b></div>
+                            <div class="col-lg-2 col-sm-12"><b>Tổ hợp môn</b></div>
                             <div class="col-lg-2 col-sm-12"><b>Tổng điểm (có ưu tiên)</b></div>
+                            <div class="col-xl-2 col-lg-12"><b>Ngày đăng ký</b></div>
                             <div class="col-lg-2 col-sm-12"><b style="margin-left:10px">Cập nhật</b> </div>
                         </div>
                         <div class="col-12"><hr class="mt-2 mb-0" /><hr class="mt-0 mb-2" /></div>
@@ -65,7 +66,11 @@
                             $(document).ready(function () {
                                 LoadData_All_DkxtHB(); 
                             });
-
+                            function ConverDateToString(date) {
+                                var parts = date.split('-');
+                                var mydate = parts[2] + '/' + parts[1] + '/' + parts[0];
+                                return mydate;
+                            }
                             function LoadData_All_DkxtHB() {
                                 $('#div_tbody_list').empty();
 
@@ -90,12 +95,13 @@
                                                 if (res.select_list_dkxt_model.length == 1) {
                                                     let div_item = "";
                                                     div_item += `<div class="row g-1">`;
-                                                    div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- </span><span class="col-4  ">Nguyện vọng ` + result.dkxt_NguyenVong + `</div>`;
+                                                    div_item += `<div class="col-xl-1 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- </span><span class="col-4  ">Nguyện vọng ` + result.dkxt_NguyenVong + `</div>`;
                                                     div_item += `<div class="col-xl-3 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Ngành: </span><span class="col-8 span_noidung_nv">` + result.dkxt_TenAll.nganh_GhiChu + `</span></div>`;
-                                                    div_item += `<div class="col-xl-3 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Tổ hợp môn: </span> <span class="col-8 span_noidung_nv">` + result.dkxt_TenAll.thm_MaTen + `</span></div>`;
+                                                    div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Tổ hợp môn: </span> <span class="col-8 span_noidung_nv">` + result.dkxt_TenAll.thm_MaTen + `</span></div>`;
                                                     div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Tổng điểm (có ưu tiên): </span><span class="col-8 span_noidung_nv">` + result.dkxt_Diem_Tong_Full + `</span></div>`;
+                                                    div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Ngày đăng ký: </span><span class="col-8 span_noidung_nv">` + ConverDateToString(result.Dkxt_NgayDK) + `</span></div>`;
                                                     div_item += `<div class="col-xl-2 col-lg-12  text-nowrap">`;
-                                                    div_item += `<button class="btn btn-sm btn-outline-success" style="margin-left:10px">Xem</button>&nbsp;<button class="btn btn-outline-primary btn-sm" onclick="update_aspirations_on_table_onclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Sửa</button>&nbsp;<button class="btn btn-outline-danger btn-sm" onclick="delete_aspirations_on_table_onclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Xoá</button>`;
+                                                    div_item += `<button class="btn btn-sm btn-outline-success" style="margin-left:10px" onclick="DkxtthHbDetail(${result.dkxt_ID})">Xem</button>&nbsp;<button class="btn btn-outline-primary btn-sm" onclick="UpdateRecordOnclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Sửa</button>&nbsp;<button class="btn btn-outline-danger btn-sm" onclick="delete_aspirations_on_table_onclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Xoá</button>`;
                                                     div_item += `</div>`;
                                                     div_item += `<div class="col-12"><hr class="mt-1 mb-2"/></div>`;
                                                     $('#div_tbody_list').append(div_item);
@@ -103,13 +109,14 @@
                                                 else if (res.select_list_dkxt_model.length > 1) {
                                                     let div_item = "";
                                                     div_item += `<div class="row g-1">`;
-                                                    div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- </span><span class="col-4  ">Nguyện vọng ` + result.dkxt_NguyenVong + `</span ></div>`;
+                                                    div_item += `<div class="col-xl-1 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- </span><span class="col-4  ">Nguyện vọng ` + result.dkxt_NguyenVong + `</span ></div>`;
                                                     div_item += `<div class="col-xl-3 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Ngành: </span><span class="col-8 span_noidung_nv">` + result.dkxt_TenAll.nganh_GhiChu + `</span></div>`;
-                                                    div_item += `<div class="col-xl-3 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Tổ hợp môn: </span> <span class="col-8 span_noidung_nv">` + result.dkxt_TenAll.thm_MaTen + `</span></div>`;
+                                                    div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Tổ hợp môn: </span> <span class="col-8 span_noidung_nv">` + result.dkxt_TenAll.thm_MaTen + `</span></div>`;
                                                     div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Tổng điểm (có ưu tiên): </span><span class="col-8 span_noidung_nv">` + result.dkxt_Diem_Tong_Full + `</span></div>`;
+                                                    div_item += `<div class="col-xl-2 col-lg-12  text-nowrap"><span class="col-4  span_thongtin_nv">- Ngày đăng ký: </span><span class="col-8 span_noidung_nv">` + ConverDateToString(result.Dkxt_NgayDK) + `</span></div>`;
                                                     div_item += `<div class="col-xl-2 col-lg-12  text-nowrap">`;
                                                     div_item += `<button style="margin-left:10px" class="btn btn-outline-info btn-sm" onclick="change_up_aspirations_on_table_onclick(${result.dkxt_ID})" ${i == 0 ? "disabled" : ''}><b>&#8743;</b></button>&nbsp;<button class="btn btn-outline-warning btn-sm" onclick="change_down_aspirations_on_table_onclick(${result.dkxt_ID})" ${i == res.select_list_dkxt_model.length - 1 ? "disabled" : ""}><b>&#8744;</b></button>`
-                                                    div_item += `&nbsp;<button class="btn btn-sm btn-outline-success">Xem</button>&nbsp;<button class="btn btn-outline-primary btn-sm" onclick="update_aspirations_on_table_onclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Sửa</button>&nbsp;<button class="btn btn-outline-danger btn-sm" onclick="delete_aspirations_on_table_onclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Xoá</button>`;
+                                                    div_item += `&nbsp;<button class="btn btn-sm btn-outline-success"  onclick="DkxtthHbDetail(${result.dkxt_ID})">Xem</button>&nbsp;<button class="btn btn-outline-primary btn-sm" onclick="UpdateRecordOnclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Sửa</button>&nbsp;<button class="btn btn-outline-danger btn-sm" onclick="delete_aspirations_on_table_onclick(${result.dkxt_ID},${result.dkxt_HB_TrangThai_HoSo})">Xoá</button>`;
                                                     div_item += `</div>`;
                                                     div_item += `<div class="col-12"><hr class="mt-1 mb-2"/></div>`;
                                                     $('#div_tbody_list').append(div_item);
@@ -137,6 +144,10 @@
                                         alert(errormessage.responseText);
                                     }
                                 });
+                            }
+                            function DkxtthHbDetail(dkxt_id) {
+                                var str_url = '?dkxt_id=' + dkxt_id;
+                                window.location.href = "/DangKyXetTuyens/DkxthocbaDetail" + str_url;
                             }
                         </script>                                     
                 </div>               
@@ -468,11 +479,13 @@
 </div>
 <script>
     // phần hiển thị dữ liệu đã đăng ký
-  
-    function update_aspirations_on_table_onclick(dkxt_id, _check_delete) {
+    
+
+    function UpdateRecordOnclick(dkxt_id, _check_delete) {
         if (_check_delete == 9) {
             $('#span_thongbao_xoa').text('');
-            $('#span_thongbao_xoa').text('Nguyện vọng đã được duyệt, không thể sửa');
+            $("#span_thongbao_xoa").css("color", "blue");
+            $('#span_thongbao_xoa').text('Nguyện vọng đã được duyệt, không thể sửa!');
             $('#bt_cancel_on_modal_delete_second').text('Đóng');
             $('#bt_ok_on_modal_delete').css('display', 'none');
 
